@@ -1,4 +1,5 @@
 include $(top_srcdir)/build-aux/init.mk
+include $(top_srcdir)/ipopt.mk
 
 # Add pthread CFLAGS.
 AM_CPPFLAGS += $(PTHREAD_CFLAGS)
@@ -18,19 +19,6 @@ roboptim_core_ipopt_plugin_la_SOURCES = doc.hh roboptim-core-ipopt-plugin.cc
 roboptim_core_ipopt_plugin_la_LIBADD = $(ROBOPTIMCORE_LIBS)
 
 # Link against Ipopt.
-roboptim_core_ipopt_plugin_la_LIBADD += -lipopt
-
-# Fix yet another Ipopt problem...
-# Ipopt may use libraries like pthreads and lapack
-# but does not link against them even if they are needed.
-# The plug-in have to do it to avoid installing libraries with
-# undefined symbols.
-# The work around is to link against lapack here, hopefully it will
-# be solved upstream and this useless dependency will be removed.
-roboptim_core_ipopt_plugin_la_LIBADD +=			\
-			$(PTHREAD_LIBS) 		\
-			-llapack -lblas -lm -ldl	\
-			-lgfortranbegin -lgfortran
-
+roboptim_core_ipopt_plugin_la_LIBADD += $(IPOPT_LIBS)
 
 roboptim_core_ipopt_plugin_la_LDFLAGS = -module -version-info 1:1:0
